--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <input type="text" id="new-last-name" name="new-last-name">
     <label for="new-phone-number">Phone Number</label>
     <input type="text" id="new-phone-number" name="new-phone-number">
+    <label for="new-email">Email Address</label>
+    <input type="text" id="new-email" name="new-email">
+    <label for="home-address">Home Address</label>
+    <input type="text" id="home-address" name="home-address">
+    <label for="work-address">Work Address</label>
+    <input type="text" id="work-address" name="work-address">
     <button type="submit">Add</button>
   </form>
 
   <h2>Contacts:</h2>
   <div id="contacts">
-  </div>
-
-  <div id="contact-details" class="hidden">
-    <p>First Name: <span id="first-name"></span></p>
-    <p>Last Name: <span id="last-name"></span></p>
-    <p>Phone Number: <span id="phone-number"></span></p>
   </div>
 </body>
 </html>
